@@ -12,7 +12,6 @@ import Tools from 'tinymce/core/api/util/Tools';
 import * as Settings from '../api/Settings';
 import { AssumeExternalTargets } from '../api/Types';
 import { AttachState, LinkDialogOutput } from '../ui/DialogTypes';
-import { hasRtcPlugin } from './DetectRtc';
 
 const hasProtocol = (url: string): boolean => /^\w+:/i.test(url);
 
@@ -183,11 +182,11 @@ const unwrapOptions = (data: LinkDialogOutput) => {
 };
 
 const link = (editor: Editor, attachState: AttachState, data: LinkDialogOutput) => {
-  hasRtcPlugin(editor) ? editor.execCommand('createlink', false, unwrapOptions(data)) : linkDomMutation(editor, attachState, data);
+  editor.hasPlugin('rtc') ? editor.execCommand('createlink', false, unwrapOptions(data)) : linkDomMutation(editor, attachState, data);
 };
 
 const unlink = (editor: Editor) => {
-  hasRtcPlugin(editor) ? editor.execCommand('unlink') : unlinkDomMutation(editor);
+  editor.hasPlugin('rtc') ? editor.execCommand('unlink') : unlinkDomMutation(editor);
 };
 
 const unlinkImageFigure = (editor: Editor, fig: Element) => {
