@@ -1,4 +1,5 @@
 Version 5.5.0 (TBD)
+    Added function to editor to determine if a plugin exists or not #TINY-766
     Fixed the `media` plugin not saving the alternative source url in some situations #TINY-4113
 Version 5.4.0 (2020-06-30)
     Added keyboard navigation support to menus and toolbars when the editor is in a ShadowRoot #TINY-6152
